TAG: targetedalleleload-5-1-4-2
DATE: 07/24/2013
STAFF: dbm
CHANGES:
1) build.xml - Use JUNIT setting instead of JAVALIB path
2) tal_common.config.default - Use STAXAPI and STAXRI setting

TAG: targetedalleleload-5-1-4-1
DATE: 07/12/2013
STAFF: sc
CHANGES: TR11396 
1. eucomm/komp csd loads- updated ALLOWED_CELLLINES
a. csd_mbp/csd_wtsi - added  'B' and 'J'
b. euccom_hmgi/eucomm/wtsi - added 'B' and 'M'

TAG: targetedalleleload-5-1-3-1
TAG: targetedalleleload-5-1-2-2
DATE: 05/3/2013
STAFF: sc
CHANGES: TR11363, fix KOMP CSD loads
* When we updated EUCOMM loads, did not realized that KOMP CSD
  shared code.
1) Create KompCsdProcessor.java, KompCsdInterpreter.java and 
    KompCsdFactory.java
2) KnockoutAlleleFactory.java - updated to hand out the proper Factory for KOMP CSD.

TAG: targetedalleleload-5-1-2-1
DATE: -4/01/2013
STAFF: sc
CHANGES: Merge tr6519 (N2MO)to the trunk
1) Changes for TR11217 and TR11329 support TRs

TAG: targetedalleleload-tr6519-2
DATE: 02/08/2013
STAFF: sc
CHANGES: 
1) LookupAlleleByMarker - consider only those alleles
with TAL project IDs
2) configs - fixed typo in note template 

TAG: targetedalleleload-tr6519-1
DATE: 02/08/2013
STAFF: sc
CHANGES: 
1) added mutationSubType SangerAlleleInput and SangerInterpreter
2) removed dup testing for pipeline - TargetedAlleleLoad
3) added special note template case for artificial intron - SangerProcessor
4) added getmethods for two new note templates - TargetedAlleleLoadCfg
5) tal_eucomm_hmgu.config.default and tal_eucomm_wtsi.config.default
a) added  EUCCOMTools cassettes to PROMOTERDRIVEN_CASSETTES list
b) added NOTE_TEMPLATE_CONDITIONAL_AI_PROMOTERDRIVEN
c) added NOTE_TEMPLATE_NONCONDITIONAL_AI_PROMOTERDRIVEN
d) added CASSETTE_L1L2_6XOSPNENH_BACT_P='This is a new promoter 1'
Note: totally unclear why the following are needed - the value is not used. Path of least
resistance to add them
e) added CASSETTE_IFITM2_INTRON_L1L2_GT0_LF2A_LACZ_BETACTP_NEO='This is a new promoter 2'