@@ -12,11 +12,11 @@
 <li><a href="/data/loads/targetedallele/csd_load_wtsi/logs/tal.cur.log">Curator Log</a></li>
 </ul>
 
-<h4>KOMP CSD Ucd allele load Logs</h4>
+<h4>KOMP CSD Mbp allele load Logs</h4>
 <ul>
-<li><a href="/data/loads/targetedallele/csd_load_ucd/logs/tal.proc.log">Process Summary Log</a></li>
-<li><a href="/data/loads/targetedallele/csd_load_ucd/logs/tal.diag.log">Diagnostic Log</a></li>
-<li><a href="/data/loads/targetedallele/csd_load_ucd/logs/tal.cur.log">Curator Log</a></li>
+<li><a href="/data/loads/targetedallele/csd_load_mbp/logs/tal.proc.log">Process Summary Log</a></li>
+<li><a href="/data/loads/targetedallele/csd_load_mbp/logs/tal.diag.log">Diagnostic Log</a></li>
+<li><a href="/data/loads/targetedallele/csd_load_mbp/logs/tal.cur.log">Curator Log</a></li>
 </ul>
 
 <h4>EUCOMM Wtsi allele load Logs</h4>
@@ -31,13 +31,6 @@
 <li><a href="/data/loads/targetedallele/eucomm_load_hmgu/logs/tal.proc.log">Process Summary Log</a></li>
 <li><a href="/data/loads/targetedallele/eucomm_load_hmgu/logs/tal.diag.log">Diagnostic Log</a></li>
 <li><a href="/data/loads/targetedallele/eucomm_load_hmgu/logs/tal.cur.log">Curator Log</a></li>
-</ul>
-
-<h4>KOMP (Regeneron) allele load Logs</h4>
-<ul>
-<li><a href="/data/loads/targetedallele/regeneron_load/logs/tal.proc.log">Process Summary Log</a></li>
-<li><a href="/data/loads/targetedallele/regeneron_load/logs/tal.diag.log">Diagnostic Log</a></li>
-<li><a href="/data/loads/targetedallele/regeneron_load/logs/tal.cur.log">Curator Log</a></li>
 </ul>
 
 </body>
