@@ -1,3 +1,8 @@
+TAG: targetedalleleload-5-1-4-3
+DATE: 07/29/2013
+STAFF: sc
+CHANGES: index.html - updated to reflect the current set of loads
+
 TAG: targetedalleleload-5-1-4-2
 DATE: 07/24/2013
 STAFF: dbm
